Fix bug of skinny buttons in media query mobile design and adjust spacing and format.

--- a/public/style.css
+++ b/public/style.css
@@ -460,12 +460,10 @@ h2 {
         text-align: center;
         justify-content: center;
         margin-top: 2em;
-        /* Add a minimum width or height */
         min-width: 300px; 
     }
 
     .appointment-logo img {
-        /* Remove max-width and height auto if not necessary */
         width: 100%; 
     }
 
@@ -490,7 +488,5 @@ h2 {
         margin: 15px 0;
     }
 
-    button {
-        margin: 50px 0;
-    }
+   
 }
